# python-project-52

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: linter-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.json
task_manager/: admin.py  asgi.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_name.py
task_manager/labels/static/css/: cover.css
task_manager/static/css/: cover.css
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_tasklabel_task_labels.py  0003_alter_task_assignee.py
task_manager/templates/: base.html  filter.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/labels/: delete.html  index.html
task_manager/templates/statuses/: delete.html  index.html
task_manager/templates/tasks/: delete.html  index.html  show.html
task_manager/templates/users/: delete.html  index.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
