[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager in Django"
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "^4.2"
django-extensions = "^3.2.1"
python-dotenv = "^1.0.0"
dj-database-url = "^1.3.0"
django-bootstrap-v5 = "^1.0.11"
django-filter = "^23.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
faker = "^18.7.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
